<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="35dp"
    android:layout_marginRight="35dp"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id = "@+id/event_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src = "@drawable/dating"
        android:scaleType="centerCrop"
        android:contentDescription="@string/item_image_CD" />
    <TextView
        style="@style/HighLightText"
        android:id = "@+id/event_name"
        android:layout_marginTop="30dp"
        android:text = "Example highlight"
        />

    <TextView
        style="@style/ArticleText"
        android:id = "@+id/event_content"
        android:layout_marginTop="30dp"
        android:text = "ould write one test for one function. Class should combine methods from one system."
        />

    <View
        android:layout_marginTop="20dp"
        style="@style/divider"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        />

        <TextView
            android:id = "@+id/title_questions"
            style="@style/HighLightText"
            android:layout_marginTop="30dp"
            android:text = "@string/event_more_info"
            />
    <!--  add unit_question here from code -->

        <Button
            style="@style/CommonButton"
            android:text="@string/submit"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"
            />

    </LinearLayout>
</ScrollView>